# DjangoWithPureAlpine

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
applications/home/: urls.py  views.py
applications/home/templates/home/: home.html
global_templates/: _base.html
project_config/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/css/: base.css
