[tool.poetry]
name = "djangowithpurealpine"
version = "0.1.0"
description = "A django template with purecss and alpinejs"
authors = ["Sebastian R. Valdivia <75336522+SebastianRValdivia@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
